fix svg icon vertical align

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -67,3 +67,5 @@
 ::-webkit-scrollbar-corner {
     background-color: #181a1b;
 }
+
+svg { vertical-align: baseline; }
